--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -3,4 +3,17 @@
   <groupId>com.test</groupId>
   <artifactId>Test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies><!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>4.1.2</version>
+</dependency><!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>4.1.2</version>
+</dependency>
+
+</dependencies>
 </project>
